\#244, \#226, and fix other ui bugs - fix cropped face of speakers - fix talks scroll in main page - fix other ui bugs

--- a/app/assets/stylesheets/app/pages/home/_event-date.scss
+++ b/app/assets/stylesheets/app/pages/home/_event-date.scss
@@ -21,7 +21,7 @@ figure#{$namespace}__img {
     line-height: 1.37969095em;
     letter-spacing: 0.05022075em;
     text-align: center;
-    margin-left: 10px;
+    margin-left: -10px;
   }
 }
 #{$namespace}__day {
