--- a/app/assets/stylesheets/app/shared/_talk.scss
+++ b/app/assets/stylesheets/app/shared/_talk.scss
@@ -12,6 +12,7 @@
   line-height: 280px;
   background-position: 50% 100%;
   background-repeat: no-repeat;
+  background-size: contain;
   img {
     display: inline-block;
     vertical-align: bottom;
